--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
-ul{
-    list-style: none;
-   
+ul {
+  list-style: none;
 }
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
+}
+li {
+  color: blue;
 }
